Backport einiger Entities aus sds
committer: Christopher Jung <bktheg@web.de>